bat.bool1.nearhundred.NearHundred.scala.error
Erreur de compilation :
NearHundred:2: error: value =< is not a member of Int
  if (n >= 100 && n-10 =< 100){
                       ^NearHundred:4: error: value =< is not a member of Int
  } else if (n =< 100 && n+10 >= 100){
               ^NearHundred:4: error: type mismatch;
 found   : Unit
 required: Boolean
  } else if (n =< 100 && n+10 >= 100){
         ^